# routes/index.js
@@ -7,7 +7,7 @@ const routes = require('express').Router();
 
 routes.use('/', require('./name'))
 
-routes.use('contacts', require('./contacts'));
+routes.use('/contacts', require('./contacts'));
 
 
 module.exports = routes;
