# swagger_output.json
@@ -22,7 +22,7 @@
         }
       }
     },
-    "contacts/": {
+    "/contacts/": {
       "get": {
         "summary": "Use to request all contacts",
         "description": "",
@@ -75,7 +75,7 @@
         }
       }
     },
-    "contacts/{id}": {
+    "/contacts/{id}": {
       "get": {
         "summary": "Use to create update existing contact",
         "description": "",
